<resources>
    <string name="app_name">로스트마켓</string>

    <!-- activity_main -->
    <string name="main_title">분실물 찾기</string>
    <string name="main_ed_search">검색</string>

    <!-- item_lost -->
    <string name="lost_tv_found_date">습득일자: %1$s</string>
    <string name="lost_tv_found_location">습득장소: %1$s</string>
    <string name="lost_tv_storage_location">보관장소: %1$s</string>

    <!-- menu_main_bottom -->
    <string name="main_bottom_found_item">분실물</string>
    <string name="main_bottom_information">종합안내</string>
    <string name="main_bottom_market">마켓</string>
    <string name="main_bottom_setting">설정</string>

    <!-- activity_setting -->
    <string name="setting_title">설정</string>
    <string name="setting_manager_login">관리자 로그인</string>

    <!-- activity_login -->
    <string name="login_ed_id">아이디를 입력하세요.</string>
    <string name="login_ed_password">비밀번호를 입력하세요.</string>
    <string name="login_tv_save_id">아이디저장</string>
    <string name="login_tv_auto_login">자동로그인</string>
    <string name="login_tv_login">로그인</string>
    <string name="login_toast_notice">아이디 또는 비밀번호가 일치하지 않습니다</string>

    <!-- activity_detail -->
    <string name="detail_title">분실물 찾기 - 상세</string>
    <string name="detail_tv_name">습득물명</string>
    <string name="detail_tv_found_date">습득일자</string>
    <string name="detail_tv_found_location">습득장소</string>
    <string name="detail_tv_contents">상세내용</string>
    <string name="detail_tv_category">물품분류</string>
    <string name="detail_tv_storage_location">보관장소</string>
    <string name="detail_tv_telephone">전화번호</string>
    <string name="detail_tv_library">02\-3408\-3865</string>

    <!-- activity_manage -->
    <string name="manage_title">분실물 관리</string>
    <string name="manage_tv_lost">분실물</string>
    <string name="manage_tv_pick_up">찾아간 분실물</string>
    <string name="manage_tv_not_rental">대여가능 품목</string>
    <string name="manage_tv_rental">대여중인 품목</string>

    <string name="market_title">분실물 마켓</string>
</resources>
