<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginActivity">

    <data>
        <variable
            name="viewModel"
            type="com.sejong.unknown.view.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="50dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_sejong"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_sejong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_ed_id"
            android:inputType="text"
            android:maxLines="1"
            android:text="@{viewModel.id}"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/ed_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_sejong" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_ed_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="@{viewModel.password}"
            app:layout_constraintBottom_toTopOf="@+id/check_tv_save_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_id" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/check_tv_save_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMarkTint="@color/colorTextRed"
            android:drawableStart="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/login_tv_save_id"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toStartOf="@+id/check_tv_auto_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_password" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/check_tv_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMarkTint="@color/colorTextRed"
            android:drawableStart="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/login_tv_auto_login"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/check_tv_save_id"
            app:layout_constraintTop_toBottomOf="@+id/ed_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextRed"
            android:text="@string/login_tv_login"
            android:textColor="@android:color/white"
            android:onClick="@{() -> viewModel.requestLogin()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_tv_save_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>