<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.detail.DetailActivity">

    <data>
        <variable
            name="lostItem"
            type="com.sejong.unknown.view.main.entity.LostItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/shadow"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshadow"
            app:layout_constraintBottom_toTopOf="@+id/scroll_view"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shadow">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_tv_name"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@{lostItem.name}"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/iv_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_found_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/detail_tv_found_date"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_found_date_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@{lostItem.foundDate}"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/tv_found_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_found_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/detail_tv_found_location"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_found_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_found_location_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@{lostItem.foundLocation}"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/tv_found_location"
                    app:layout_constraintTop_toBottomOf="@+id/tv_found_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_contents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_tv_contents"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_found_location" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_contents_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@{lostItem.contents}"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_contents" />

                <View
                    android:id="@+id/divide"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorDivide"
                    app:layout_constraintTop_toBottomOf="@+id/tv_contents_description" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/detail_tv_category"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divide" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_category_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:text="@{lostItem.type.name}"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/tv_category"
                    app:layout_constraintTop_toBottomOf="@+id/divide" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_storage_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/detail_tv_storage_location"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_storage_location_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@{lostItem.storageLocation}"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/tv_storage_location"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/detail_tv_telephone"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_storage_location" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_telephone_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/detail_tv_library"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/tv_telephone"
                    app:layout_constraintTop_toBottomOf="@+id/tv_storage_location" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>